--- a/COMP306.LibraryManagement.APP/Views/Home/Index.cshtml
+++ b/COMP306.LibraryManagement.APP/Views/Home/Index.cshtml
@@ -62,10 +62,15 @@
                                 <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
                                     <i class="bi bi-book"></i>
                                 </div>
-                                <div class="ps-3">
+                                <div id="best_book_text" class="ps-3">
                                     <h6>A Book</h6>
                                     <span class="text-muted small pt-2 ps-1">Author</span>
                                 </div>
+                                <script>
+                                    document.addEventListener("DOMContentLoaded", () => {
+                                        UpdateBestRankedBook("best_book_text", "@Url.Action("GetBestRankedBook", "Home")");
+                                    });
+                                </script>
                             </div>
                         </div>
                     </div>
@@ -196,6 +201,7 @@
                 <div class="card-body pb-0">
                     <h5 class="card-title">Book Subjects <span>| Today</span></h5>
                     <div id="trafficChart" style="min-height: 400px;" class="echart"></div>
+                    ￼
                     <script>
                         document.addEventListener("DOMContentLoaded", () => {
                             CreatePieChart("trafficChart", "@Url.Action("ListBooksSubjectsPercentage", "Home")");
@@ -206,4 +212,6 @@
         </div>
     </div>
 </section>
+
+
 
