--- a/COMP306.LibraryManagement.APP/Views/Shared/_Layout.cshtml
+++ b/COMP306.LibraryManagement.APP/Views/Shared/_Layout.cshtml
@@ -120,7 +120,7 @@
     </footer>
 
     <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/lib/apexcharts/apexcharts.min.js"></script>
