fixed displaying issues

--- a/COMP306.LibraryManagement.APP/Views/Home/Index.cshtml
+++ b/COMP306.LibraryManagement.APP/Views/Home/Index.cshtml
@@ -192,7 +192,7 @@
                 </div>
                 <script>
                         document.addEventListener("DOMContentLoaded", () => {
-                            LoadNewcomerBooks("newcomer", "@Url.Action("ListNewComerBooks", "Home")");
+                            LoadNewComerBooks("newcomer", "@Url.Action("ListNewComerBooks", "Home")");
                         });
                 </script>
             </div>
