--- a/COMP306.LibraryManagement.APP/Views/Collections/Index.cshtml
+++ b/COMP306.LibraryManagement.APP/Views/Collections/Index.cshtml
@@ -17,7 +17,131 @@
 </div>
 
 <section class="section">
+    <!-- Input search bar-->
+    <div id="input-section">
+        <div class="row">
+            <div class="input-box">
+                <input type="text" class="form-control">
+                <i class="fade fa-search"></i>
+                <script>
+                    document.addEventListener("DOMContentLoaded", () => {
+                        findBook("@Url.Action("BookList", "Collections")");
+                    });
+                </script>
+            </div>
+        </div>
+    </div>
     <div class="row">
-
+    <!-- Side bar Section-->
+        <div class="col-4" id="sidebar-section">
+            <div class="flex-shrink-0 p-3 bg-white" style="width: 280px;">
+                <ul class="list-unstyled ps-0">
+                    <li class="mb-1">
+                        <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#content-type-collapse" aria-expanded="true">
+                            Content Type
+                        </button>
+                        <div class="collapse show form-check" id="content-type-collapse">                        
+                            <input class="form-check-input" type="checkbox" value="" id="contentType1">
+                            <label class="form-check-label" for="contentType1">
+                                Content Type1
+                            </label><br>
+                            <input class="form-check-input" type="checkbox" value="" id="contentType2">
+                            <label class="form-check-label" for="contentType2">
+                                Content Type2
+                            </label>
+                        </div>
+                    </li>
+                    <li class="mb-1">
+                        <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#publication-date-collapse" aria-expanded="false">
+                            Publication Date 
+                        </button>
+                        <div class="collapse form-group" id="publication-date-collapse">
+                        
+                        </div>
+                    </li>
+                    <li class="mb-1">
+                        <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#discipline-collapse" aria-expanded="false">
+                            Discipline
+                        </button>
+                        <div class="collapse show form-check" id="discipline-collapse">
+                            <input class="form-check-input" type="checkbox" value="" id="discipline1">
+                            <label class="form-check-label" for="discipline1">
+                                Discipline1
+                            </label><br>
+                            <input class="form-check-input" type="checkbox" value="" id="discipline2">
+                            <label class="form-check-label" for="discipline2">
+                                Discipline2
+                            </label>
+                        </div>
+                    </li>
+                    <li class="mb-1">
+                        <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#subject-term-collapse" aria-expanded="false">
+                            Subject Terms 
+                        </button>
+                        <div class="collapse show form-check" id="subject-term-collapse">
+                            <input class="form-check-input" type="checkbox" value="" id="subjectTerm1">
+                            <label class="form-check-label" for="subjectTerm1">
+                                Subject Term1
+                            </label><br>
+                            <input class="form-check-input" type="checkbox" value="" id="subjectTerm2">
+                            <label class="form-check-label" for="subjectTerm2">
+                                Subject Term2
+                            </label>
+                        </div>
+                    </li>
+                    <li class="mb-1">
+                        <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#author-collapse" aria-expanded="false">
+                             Author
+                        </button>
+                        <div class="collapse form-check" id="author-collapse">
+                            <input class="form-check-input" type="checkbox" value="" id="author1">
+                            <label class="form-check-label" for="aurhor1">
+                                Author1
+                            </label><br>
+                            <input class="form-check-input" type="checkbox" value="" id="subjectTerm2">
+                            <label class="form-check-label" for="subjectTerm2">
+                                Author2
+                            </label>
+                        </div>
+                    </li>
+                    <li class="mb-1">
+                        <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#language-collapse" aria-expanded="false">
+                            Langauage
+                        </button>
+                        <div class="collapse form-check" id="language-collapse">
+                            <input class="form-check-input" type="checkbox" value="" id="language1">
+                            <label class="form-check-label" for="language1">
+                                Language1
+                            </label><br>
+                            <input class="form-check-input" type="checkbox" value="" id="language2">
+                            <label class="form-check-label" for="language2">
+                                Language2
+                            </label>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    <!-- Result Section-->
+        <div class="col-8" id="result-section">
+            <ul class="list-group">
+                <li class="list-group-item">
+                    <div class="">
+                        <h3>The Book Title</h3>
+                        <p>The Author</p>
+                        <p>Publication Date</p>
+                        <p>The Content Type </p>
+                    </div>                
+                </li>
+                    <li class="list-group-item">
+                        <div class="">
+                            <h3>The Book Title</h3>
+                            <p>The Author</p>
+                            <p>Publication Date</p>
+                            <p>The Content Type </p>
+                        </div>
+                    </li>
+            </ul>
+        </div>
     </div>
 </section>
