--- a/COMP306.LibraryManagement.APP/Views/Home/Index.cshtml
+++ b/COMP306.LibraryManagement.APP/Views/Home/Index.cshtml
@@ -1,9 +1,12 @@
 ﻿@{
+    Layout = "_Layout";
     ViewData["Title"] = "Home";
     ViewData["Home_Collapsed"] = "";
     ViewData["Collections_Collapsed"] = "collapsed";
     ViewData["Reservation_Collapsed"] = "collapsed";
     ViewData["Profile_Collapsed"] = "collapsed";
+    ViewData["FullName"] = ViewBag.FullName;
+    ViewData["RoleName"] = ViewBag.RoleName;
 }
 
 <div class="pagetitle">
