--- a/COMP306.LibraryManagement.APP/Views/Profile/Index.cshtml
+++ b/COMP306.LibraryManagement.APP/Views/Profile/Index.cshtml
@@ -1,9 +1,13 @@
 ﻿@{
+    Layout = "_Layout";
     ViewData["Title"] = "Profile";
     ViewData["Home_Collapsed"] = "collapsed";
     ViewData["Collections_Collapsed"] = "collapsed";
     ViewData["Reservation_Collapsed"] = "collapsed";
     ViewData["Profile_Collapsed"] = "";
+    ViewData["FullName"] = ViewBag.FullName;
+    ViewData["RoleName"] = ViewBag.RoleName;
+    ViewData["Email"] = ViewBag.Email;
 }
 
 <div class="pagetitle">
