implement profile page and change password

--- a/COMP306.LibraryManagement.APP/Views/Shared/_Layout.cshtml
+++ b/COMP306.LibraryManagement.APP/Views/Shared/_Layout.cshtml
@@ -132,6 +132,7 @@
     <script src="~/lib/php-email-form/validate.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="~/js/calendar.js" asp-append-version="true"></script>
+    <script src="~/js/account.js" asp-append-version="true"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
