--- a/COMP306.LibraryManagement.APP/Views/Profile/Index.cshtml
+++ b/COMP306.LibraryManagement.APP/Views/Profile/Index.cshtml
@@ -22,6 +22,96 @@
 
 <section class="section">
     <div class="row">
+        <div class="col-xl-4">
+            <div class="card">
+                <div class="card-body profile-card pt-4 d-flex flex-column align-items-center">
+                    <img src="~/assets/img/profile-placeholder.jpg" alt="Profile" class="rounded-circle">
+                    <h2>@ViewData["FullName"]</h2>
+                    <h3>@ViewData["RoleName"]</h3>
+                </div>
+            </div>
+        </div>
+        <div class="col-xl-8">
+            <div class="card">
+                <div class="card-body pt-3">
+                    <ul class="nav nav-tabs nav-tabs-bordered">
+                        <li class="nav-item">
+                            <button class="nav-link active" data-bs-toggle="tab" data-bs-target="#profile-overview">Overview</button>
+                        </li>
+                        <li class="nav-item">
+                            <button class="nav-link" data-bs-toggle="tab" data-bs-target="#profile-change-password">Change Password</button>
+                        </li>
+                    </ul>
+                    <div class="tab-content pt-2">
+                        <div class="tab-pane fade show active profile-overview" id="profile-overview">
+                            <h5 class="card-title">Profile Details</h5>
+                            <div class="row">
+                                <div class="col-lg-3 col-md-4 label ">Full Name</div>
+                                <div class="col-lg-9 col-md-8">@ViewData["FullName"]</div>
+                            </div>
+                            <div class="row">
+                                <div class="col-lg-3 col-md-4 label">Roles</div>
+                                <div class="col-lg-9 col-md-8">@ViewData["RoleName"]</div>
+                            </div>
+                            <div class="row">
+                                <div class="col-lg-3 col-md-4 label">Email</div>
+                                <div class="col-lg-9 col-md-8">@ViewData["Email"]</div>
+                            </div>
+                        </div>
+                        <div class="tab-pane fade pt-3" id="profile-change-password">
+                            <form id="passwordForm">
+                                <div class="row mb-3">
+                                    <label for="currentPassword" class="col-md-4 col-lg-3 col-form-label">Current Password</label>
+                                    <div class="col-md-8 col-lg-9">
+                                        <input name="password" type="password" class="form-control" id="currentPassword">
+                                    </div>
+                                </div>
+                                <div class="row mb-3">
+                                    <label for="newPassword" class="col-md-4 col-lg-3 col-form-label">New Password</label>
+                                    <div class="col-md-8 col-lg-9">
+                                        <input name="newpassword" type="password" class="form-control" id="newPassword">
+                                    </div>
+                                </div>
+                                <div class="row mb-3">
+                                    <label for="renewPassword" class="col-md-4 col-lg-3 col-form-label">Re-enter New Password</label>
+                                    <div class="col-md-8 col-lg-9">
+                                        <input name="renewpassword" type="password" class="form-control" id="renewPassword">
+                                    </div>
+                                </div>
+                                <div class="text-center">
+                                    <button type="submit" class="btn btn-primary">Change Password</button>
+                                    <script>document.addEventListener("DOMContentLoaded", () => {
+                                            document.getElementById("passwordForm")
+                                                .addEventListener("submit", () => {
+                                                    event.preventDefault();
 
+                                                    ChangePassword(document.getElementById("currentPassword").value,
+                                                        document.getElementById("newPassword").value,
+                                                        document.getElementById("renewPassword").value);
+                                                });
+                                        });</script>
+                                </div>
+                                <div class="modal fade" id="modalChangePassword" tabindex="-1">
+                                    <div class="modal-dialog">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h5 class="modal-title">Message</h5>
+                                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                            </div>
+                                            <div class="modal-body" id="modalBody">
+                                                
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </section>
