--- a/COMP306.LibraryManagement.APP/Views/Home/Index.cshtml
+++ b/COMP306.LibraryManagement.APP/Views/Home/Index.cshtml
@@ -46,10 +46,14 @@
                                     <i class="bi bi-people"></i>
                                 </div>
                                 <div class="ps-3">
-                                    <h6>1244</h6>
-                                    <span class="text-danger small pt-1 fw-bold">12%</span> <span class="text-muted small pt-2 ps-1">decrease</span>
+                                    <h6 id="total-users"></h6>
+                                    <span class="text-danger small pt-1 fw-bold" id="user-increase-rate"></span> <span class="text-muted small pt-2 ps-1" id="increase-decrease-label"></span>
                                 </div>
                             </div>
+                            <script>document.addEventListener("DOMContentLoaded", () => {
+                                        UpdateUserStatistics("@Url.Action("GetTotalUsers", "Home")",
+                                            "@Url.Action("GetUserIncreaseRate", "Home")");
+                                });</script>
                         </div>
                     </div>
                 </div>
