--- a/COMP306.LibraryManagement.APP/Views/Shared/_Layout.cshtml
+++ b/COMP306.LibraryManagement.APP/Views/Shared/_Layout.cshtml
@@ -1,5 +1,4 @@
-<<<<<<< Updated upstream
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -137,141 +136,3 @@
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
-
-=======
-﻿<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Koç University Library</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/COMP306.LibraryManagement.APP.styles.css" asp-append-version="true" />
-
-    <link href="https://fonts.gstatic.com" rel="preconnect">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-
-    <link href="~/lib/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-    <link href="~/lib/boxicons/css/boxicons.min.css" rel="stylesheet">
-    <link href="~/lib/quill/quill.snow.css" rel="stylesheet">
-    <link href="~/lib//quill/quill.bubble.css" rel="stylesheet">
-    <link href="~/lib/remixicon/remixicon.css" rel="stylesheet">
-    <link href="~/lib/simple-datatables/style.css" rel="stylesheet">
-</head>
-<body>
-    <header id="header" class="header fixed-top d-flex align-items-center">
-
-        <div class="d-flex align-items-center justify-content-between">
-            <a href="@Url.Action("Index", "Home")" class="logo d-flex align-items-center">
-                <img src="~/assets/img/library-logo.png" alt="">
-                <span class="d-none d-lg-block">Koç University Library</span>
-            </a>
-            <i class="bi bi-list toggle-sidebar-btn"></i>
-        </div>
-
-        <nav class="header-nav ms-auto">
-            <ul class="d-flex align-items-center">
-                <li class="nav-item dropdown pe-3">
-                    <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
-                        <img src="~/assets/img/profile-placeholder.jpg" alt="Profile" class="rounded-circle">
-                        <span class="d-none d-md-block dropdown-toggle ps-2">Arda Erlik</span>
-                    </a>
-                    <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
-                        <li class="dropdown-header">
-                            <h6>Arda Erlik</h6>
-                            <span>Software Engineer</span>
-                        </li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-                        <li>
-                            <a class="dropdown-item d-flex align-items-center" href="@Url.Action("Index", "Profile")">
-                                <i class="bi bi-person"></i>
-                                <span>My Profile</span>
-                            </a>
-                        </li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-                        <li>
-                            <a class="dropdown-item d-flex align-items-center" href="@Url.Action("Index", "Profile")">
-                                <i class="bi bi-gear"></i>
-                                <span>Account Settings</span>
-                            </a>
-                        </li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-                        <li>
-                            <a class="dropdown-item d-flex align-items-center" href="#">
-                                <i class="bi bi-box-arrow-right"></i>
-                                <span>Sign Out</span>
-                            </a>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-        </nav>
-
-    </header>
-
-    <aside id="sidebar" class="sidebar">
-
-        <ul class="sidebar-nav" id="sidebar-nav">
-            <li class="nav-item">
-                <a class="nav-link @ViewData["Home_Collapsed"]" href="@Url.Action("Index", "Home")">
-                    <i class="bi bi-grid"></i>
-                    <span>Dashboard</span>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link @ViewData["Collections_Collapsed"]" href="@Url.Action("Index", "Collections")">
-                    <i class="bi bi-menu-button-wide"></i>
-                    <span>Digital Collections</span>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link @ViewData["Reservation_Collapsed"]" href="@Url.Action("Index", "Reservation")">
-                    <i class="bi bi-card-list"></i>
-                    <span>Room - Table Reservation</span>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link @ViewData["Profile_Collapsed"]" href="@Url.Action("Index", "Profile")">
-                    <i class="bi bi-person"></i>
-                    <span>Profile</span>
-                </a>
-            </li>
-        </ul>
-
-    </aside>
-
-    <main role="main" class="main" id="main">
-        @RenderBody()
-    </main>
-    
-    <footer id="footer" class="footer">
-        <div class="copyright">
-            &copy; Copyright <strong><span>COMP306.LibraryManagement</span></strong>. All Rights Reserved
-        </div>
-    </footer>
-
-    <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/lib/apexcharts/apexcharts.min.js"></script>
-    <script src="~/lib/chart.js/chart.umd.js"></script>
-    <script src="~/lib/echarts/echarts.min.js"></script>
-    <script src="~/lib/quill/quill.min.js"></script>
-    <script src="~/lib/simple-datatables/simple-datatables.js"></script>
-    <script src="~/lib/tinymce/tinymce.min.js"></script>
-    <script src="~/lib/php-email-form/validate.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-
-    @await RenderSectionAsync("Scripts", required: false)
-</body>
-</html>
-
->>>>>>> Stashed changes
