--- a/COMP306.LibraryManagement.APP/Views/Home/Index.cshtml
+++ b/COMP306.LibraryManagement.APP/Views/Home/Index.cshtml
@@ -31,11 +31,16 @@
                                 <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
                                     <i class="bi bi-cart"></i>
                                 </div>
-                                <div class="ps-3">
-                                    <h6>46</h6>
-                                    <span class="text-success small pt-1 fw-bold">12%</span> <span class="text-muted small pt-2 ps-1">increase</span>
+                                <div class="ps-3" >
+                                    <h6 id="reservation-count">46</h6>
+                                    <span class="text-success small pt-1 fw-bold" id="reservation-rate">12%</span> <span class="text-muted small pt-2 ps-1" id="reservation-label">increase</span>
                                 </div>
                             </div>
+                            <script>
+                                document.addEventListener("DOMContentLoaded", () => {
+                                    UpdateRoomResStats("@Url.Action("GetRoomReservationCount", "Home")", "@Url.Action("GetRoomReservationRate", "Home")");
+                                });
+                            </script>
                         </div>
                     </div>
                 </div>
