--- a/COMP306.LibraryManagement.APP/Views/Home/Index.cshtml
+++ b/COMP306.LibraryManagement.APP/Views/Home/Index.cshtml
@@ -32,8 +32,8 @@
                                     <i class="bi bi-cart"></i>
                                 </div>
                                 <div class="ps-3" >
-                                    <h6 id="reservation-count">46</h6>
-                                    <span class="text-success small pt-1 fw-bold" id="reservation-rate">12%</span> <span class="text-muted small pt-2 ps-1" id="reservation-label">increase</span>
+                                    <h6 id="reservation-count"></h6>
+                                    <span class="text-success small pt-1 fw-bold" id="reservation-rate"></span> <span class="text-muted small pt-2 ps-1" id="reservation-label"></span>
                                 </div>
                             </div>
                             <script>
