--- a/COMP306.LibraryManagement.APP/wwwroot/css/site.css
+++ b/COMP306.LibraryManagement.APP/wwwroot/css/site.css
@@ -1219,5 +1219,10 @@ h6 {
 
 .scheduler_default_corner :nth-child(2) {
     display: none !important;
-} 
+}
 
+
+.scrollable-collections {
+    max-height: 200px; 
+    overflow-y: auto; 
+}
